--- a/Makefile.action
+++ b/Makefile.action
@@ -14,7 +14,7 @@ all: $(OUT)
 $(ALIAS):
 	make $(wildcard */$@)
 
-$(OUT): %.out: perm.lua sim_perm.lua %.dat
+$(OUT): %.out: %.dat perm.lua sim_perm.lua
 	@date
 	# lua5.4 sim_perm.lua -o $(basename $<) $< > $(basename $<).out
 	lua sim_perm.lua -o $(basename $<) $< > $(basename $<).out
