--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -85,7 +85,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Build results files
-        run: make -f Makefile.action all
+        run: make -j4 -f Makefile.action all
         
       - name: ls
         run: ls -al ./*
