--- a/Makefile.action
+++ b/Makefile.action
@@ -1,15 +1,21 @@
 
-DAT=$(wildcard */*.dat)
+DAT=$(wildcard s*/*.dat)
 OUT=$(addsuffix .out, $(basename $(DAT)))
 
 ALIAS=$(notdir $(OUT))
 
-.PHONY: all $(ALIAS)
+.PHONY: all clean_tex $(ALIAS)
 
 include Makefile.conf
 
 all: $(OUT)
-	
+	make stats.pdf
+
+clean_tex:
+	rm statsMN.tex
+	rm statsMB.tex
+	rm statsInfo.tex
+	rm -r tex-aux
 
 $(ALIAS):
 	make $(wildcard */$@)
@@ -18,4 +24,11 @@ $(OUT): %.out: %.dat perm.lua sim_perm.lua
 	@date
 	# lua5.4 sim_perm.lua -o $(basename $<) $< > $(basename $<).out
 	lua sim_perm.lua -o $(basename $<) $< > $(basename $<).out
+	echo "\\addplot table {$(basename $<)_statMN.out}; \\addlegendentry{$(basename $(notdir $<))}" >> "statsMN.tex"
+	echo "\\addplot table {$(basename $<)_statMB.out}; \\addlegendentry{$(basename $(notdir $<))}" >> "statsMB.tex"
+	echo "\\addplot table {$(basename $<)_statInfo.out}; \\addlegendentry{$(basename $(notdir $<))}" >> "statsInfo.tex"
 	@date
+
+stats.pdf: stats.tex statsMN.tex statsMB.tex
+	test -d tex-aux || mkdir tex-aux
+	lualatex "$<"
