fix action for latex

--- a/Makefile.action
+++ b/Makefile.action
@@ -9,7 +9,7 @@ ALIAS=$(notdir $(OUT))
 include Makefile.conf
 
 all: $(OUT)
-	make stats.pdf
+	make -f Makefile.action stats.pdf
 
 clean_tex:
 	- rm statsMN.tex
