--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -63,6 +63,11 @@ jobs:
           luarocks install luaprompt
           luarocks install lua_cliargs
 
+      - name: Install TeXLive
+        uses: DanySK/setup-texlive-action@master
+        with:
+          requirements-file: .github/texlive/requirements.txt
+
       - name: ls
         run: ls -al ./*
 
