--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -64,9 +64,7 @@ jobs:
           luarocks install lua_cliargs
 
       - name: Install TeXLive
-        uses: DanySK/setup-texlive-action@master
-        with:
-          requirements-file: .github/texlive/requirements.txt
+        run: sudo apt-get install -y texlive texlive-latex-extra
 
       - name: ls
         run: ls -al ./*
