--- a/Makefile.action
+++ b/Makefile.action
@@ -12,9 +12,9 @@ all: $(OUT)
 	make -f Makefile.action stats.pdf
 
 clean_tex:
-	- rm statsMN.tex
-	- rm statsMB.tex
-	- rm statsInfo.tex
+	- rm statsMN.tex{,sort}
+	- rm statsMB.tex{,sort}
+	- rm statsInfo.tex{,sort}
 	- rm -r tex-aux
 
 $(ALIAS):
@@ -24,11 +24,14 @@ $(OUT): %.out: %.dat perm.lua sim_perm.lua
 	@date
 	# lua5.4 sim_perm.lua -o $(basename $<) $< > $(basename $<).out
 	lua sim_perm.lua -o $(basename $<) $< > $(basename $<).out
-	echo "\\\addplot table {$(basename $<)_statMN.out}; \\\addlegendentry{$(basename $(notdir $<))}" >> "statsMN.tex"
-	echo "\\\addplot table {$(basename $<)_statMB.out}; \\\addlegendentry{$(basename $(notdir $<))}" >> "statsMB.tex"
-	echo "\\\addplot table {$(basename $<)_statInfo.out}; \\\addlegendentry{$(basename $(notdir $<))}" >> "statsInfo.tex"
+	echo "\\addplot table {$(basename $<)_statMN.out}; \\addlegendentry{$(basename $(notdir $<))}" >> "statsMN.tex"
+	echo "\\addplot table {$(basename $<)_statMB.out}; \\addlegendentry{$(basename $(notdir $<))}" >> "statsMB.tex"
+	echo "\\addplot table {$(basename $<)_statInfo.out}; \\addlegendentry{$(basename $(notdir $<))}" >> "statsInfo.tex"
 	@date
 
-stats.pdf: stats.tex statsMN.tex statsMB.tex
+stats.pdf: stats.tex statsMN.tex statsMB.tex statsInfo.tex
+	sort -u statsInfo.tex > statsInfo.tex.sort
+	sort -u statsMB.tex > statsMB.tex.sort
+	sort -u statsMN.tex > statsMN.tex.sort
 	test -d tex-aux || mkdir tex-aux
 	pdflatex "$<"
