restore ts second try

--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -72,6 +72,9 @@ jobs:
       - run: git branch
       - run: git log --branches --remotes --tags --graph --pretty=oneline --abbrev-commit --date=relative --decorate
 
+      - name: restore modification times -- save
+        run: ./restore-ts_save.sh
+
       - name: update on master
         run: |
           git config --global user.name "Updater"
@@ -80,8 +83,8 @@ jobs:
       - run: git branch
       - run: git log --branches --remotes --tags --graph --pretty=oneline --abbrev-commit --date=relative --decorate
 
-      - name: restore modification times
-        run: ./restore-ts.sh
+      - name: restore modification times -- exec
+        run: ./restore-ts_exec.sh
 
       - name: ls
         run: ls -al ./*
