--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -72,21 +72,21 @@ jobs:
       - run: git branch
       - run: git log --branches --remotes --tags --graph --pretty=oneline --abbrev-commit --date=relative --decorate
 
-      - name: update on main + old modifiaction times
+      - name: update on main
         run: |
           git config --global user.name "Updater"
-          ./restore-ts_save.sh
+          # ./restore-ts_save.sh
           git rebase main
-          ./restore-ts_exec.sh
+          # ./restore-ts_exec.sh
 
-      - name: modifiaction times from main for .dat
-        run: |
-          git stash
-          git switch main
-          ./restore-ts_save.sh
-          git switch build
-          git stash pop
-          ./restore-ts_exec.sh
+      # - name: modifiaction times from main for .dat
+      #   run: |
+      #     git stash
+      #     git switch main
+      #     ./restore-ts_save.sh
+      #     git switch build
+      #     git stash pop
+      #     ./restore-ts_exec.sh
 
       - run: git branch
       - run: git log --branches --remotes --tags --graph --pretty=oneline --abbrev-commit --date=relative --decorate
@@ -97,7 +97,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Build results files
         run: |
-          make -f Makefile.action all
+          make -B -j4 -f Makefile.action all
         
       - name: ls
         run: ls -al ./*
