--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -75,9 +75,8 @@ jobs:
       - name: ls
         run: ls -al ./*
 
-      # Runs a single command using the runners shell
       - name: Build results files
-        run: 
+        run: |
           make -f Makefile.action all
           make -f Makefile.action stats.pdf
 
