--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -1,6 +1,7 @@
 # This is a basic workflow to help you get started with Actions
 
 name: build-commit
+concurrency: build-commit
 
 # Controls when the workflow will run
 on:
