--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -37,7 +37,7 @@ jobs:
       - run: git log --oneline
 
       - name: apt stuff
-        uses: awalsh128/cache-apt-pkgs-action@latest
+        uses: awalsh128/cache-apt-pkgs-action@1.1.1
         with:
           packages: graphviz texlive texlive-latex-extra
           version: 1.0
