--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -37,10 +37,14 @@ jobs:
       - run: git log --oneline
 
       - name: apt stuff
-        uses: awalsh128/cache-apt-pkgs-action@v1.1.1
-        with:
-          packages: graphviz texlive texlive-latex-extra
-          version: 1.1
+        run: |
+          sudo apt update
+          sudo apt install -y graphviz texlive texlive-latex-extra
+        # TODO: restore is not working correctly
+        # uses: awalsh128/cache-apt-pkgs-action@v1.1.1
+        # with:
+        #   packages: graphviz texlive texlive-latex-extra
+        #   version: 1.1
 
       - name: Install lua
         uses: leafo/gh-actions-lua@v9
