change for season 4

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -1,4 +1,4 @@
-.DEFAULT_GOAL := s02r/s02r.out
+.DEFAULT_GOAL := s04/s04.out
 
-cat: s02r/s02r.out
-	bat --theme Nord s02r/s02r.out
+cat: $(.DEFAULT_GOAL)
+	bat --theme Nord "$<"
