--- a/.github/workflows/build-artifact.yml
+++ b/.github/workflows/build-artifact.yml
@@ -3,6 +3,7 @@
 name: build-artifact
 
 # Controls when the workflow will run
+# FIXME: doesn't run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   # push:
