add s04 data (forgotten to remove dup as well)

--- a/s04/s04.yaml
+++ b/s04/s04.yaml
@@ -139,6 +139,12 @@ instructions:
     comment: "E07"
     map:
       Steffi: Burim
+  - type: MB
+    lights: 0
+    num: 3.11
+    comment: "E07"
+    map:
+      Steffi: Barkin
 
   - type: MN
     lights: 2
