add s04 dummy data

--- a/s04/s04.yaml
+++ b/s04/s04.yaml
@@ -229,3 +229,11 @@ instructions:
       Aurelia: Marwin
       Henna: Kenneth
       # Max
+
+  # - type: MN
+  #   lights: 0
+  #   num: 6
+  #   comment: "E13"
+  #   map:
+  #     Dorna: Burim
+  #       # Larissa: Marwin
