--- a/s04/s04.yaml
+++ b/s04/s04.yaml
@@ -230,10 +230,37 @@ instructions:
       Henna: Kenneth
       # Max
 
+  - type: MN
+    lights: 0
+    num: 6
+    comment: "E13"
+    map:
+      Dorna: Burim
+        # Larissa: Marwin
+  - type: MN
+    lights: 1
+    num: 6
+    comment: "E14"
+    map:
+      Steffi: Chris
+      Caro: Ken
+      Vanessa: Joel
+      Carina: Sasa
+      Juliette: Barkin
+      Henna: Kenneth
+      Dorna: Deniz
+      Larissa: Marwin
+      Aurelia: Burim
+      Valeria: Pascal
+
+  # - type: MN
+  #   lights: 4
+  #   num: 5
+  #   comment: "E12"
+  #   map:
+
   # - type: MN
   #   lights: 0
   #   num: 6
   #   comment: "E13"
   #   map:
-  #     Dorna: Burim
-  #       # Larissa: Marwin
