--- a/s04/s04.yaml
+++ b/s04/s04.yaml
@@ -293,7 +293,7 @@ instructions:
     map:
       Steffi: Chris
       Caro: Ken
-      Burim: Valeria
+      Valeria: Burim
       Carina: Kenneth
       Juliette: Barkin
       Larissa: Pascal
