--- a/s03r/s03r.yaml
+++ b/s03r/s03r.yaml
@@ -2,31 +2,31 @@
 # 0wvedwvep0wPj
 
 setA:
+  - Alicia
+  - Darya
+  - Jenny
+  - Kim
+  - Marie
+  - Paulina
   - Sabrina
   - Sandra
   - Shakira
-  - Paulina
-  - Marie
-  - Jenny
   - Steffi
-  - Alicia
-  - Kim
-  - Darya
 
 dup: Max
 
 setB:
-  - Mike
   - Danilo
-  - Steffen
-  - Teezy
   - Elia
   - Emanuell
   - Fabio
   - Marvin
-  - Peter
-  - Paco
   - Max
+  - Mike
+  - Paco
+  - Peter
+  - Steffen
+  - Teezy
 
 instructions:
   - type: MB
@@ -98,9 +98,9 @@ instructions:
       Shakira: Fabio
       Steffi: Marvin
 
-  # - type: MB
-  #   lights: 
-  #   num: 4
-  #   comment: "E09"
-  #   map:
-  #     Kim: Mike
+  - type: MB
+    lights: 
+    num: 4
+    comment: "E09"
+    map:
+      Kim: Mike
